--- a/application.yaml
+++ b/application.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
 
   source:
-    repoURL: https://gitlab.com/nanuchi/argocd-app-config.git
+    repoURL: https://github.com/SujayDas1999/k8s-sports-app.gi
     targetRevision: HEAD
     path: dev
   destination:
