--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-service
+  name: api-gateway-service
 spec:
   selector:
-    app: myapp
+    app: api-gateway
   ports:
     - port: 3001
       protocol: TCP
       targetPort: 3001
+      nodePort: 30001
