--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -3,9 +3,11 @@ kind: Service
 metadata:
   name: api-gateway-service
 spec:
+  type: NodePort
   selector:
     app: api-gateway
   ports:
     - port: 3000
       protocol: TCP
       targetPort: 3000
+      nodePort: 30000
