--- a/dev/product-deployment.yaml
+++ b/dev/product-deployment.yaml
@@ -17,3 +17,6 @@ spec:
           image: sujaydas/sportsapp-product
           ports:
             - containerPort: 3001
+          env:
+            - name: RUNNING_IN_CONTAINER
+              value: "true"
