--- a/application.yaml
+++ b/application.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://github.com/SujayDas1999/k8s-sports-app.git
     targetRevision: HEAD
-    path: dev
+    path: my-app
   destination:
     server: https://kubernetes.default.svc
     namespace: myapp
