--- a/application.yaml
+++ b/application.yaml
@@ -12,7 +12,7 @@ spec:
     path: my-app
   destination:
     server: https://kubernetes.default.svc
-    namespace: myapp
+    namespace: dev
 
   syncPolicy:
     syncOptions:
