--- a/my-app/apigateway/values.yaml
+++ b/my-app/apigateway/values.yaml
@@ -5,8 +5,8 @@ imagename: sujaydas/sportsapp-apigateway
 port: 3000
 
 service:
-  service-name: api-gateway-service
-  service-type: NodePort
+  servicename: api-gateway-service
+  servicetype: NodePort
   selectorname: api-gateway
   port: 3000
   protocol: tcp
