--- a/my-app/templates/service.yaml
+++ b/my-app/templates/service.yaml
@@ -2,18 +2,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.service.service-name }}
+  name: {{ .Values.service.servicename }}
 spec:
   {{- if .Values.service.service-type }}
-  type: {{ .Values.service.service-type }}
+  type: {{ .Values.service.servicetype }}
   {{- end }}
   selector:
-    app: {{ .Values.service.selector-name }}
+    app: {{ .Values.service.selectorname }}
   ports:
     - port: {{ .Values.service.port }}
       protocol: {{ .Values.service.protocol }}
       targetPort: {{ .Values.service.targetPort }}
-      {{- if eq .Values.service.service-type "NodePort" }}
+      {{- if eq .Values.service.servicetype "NodePort" }}
       nodePort: {{ .Values.service.nodePort }}
       {{- end }}
 {{- end }}
