--- a/my-app/apigateway/values.yaml
+++ b/my-app/apigateway/values.yaml
@@ -9,7 +9,7 @@ service:
   servicetype: NodePort
   selectorname: api-gateway
   port: 3000
-  protocol: tcp
+  protocol: TCP
   targetPort: 3000
   nodePort: 30000
 
