--- a/my-app/templates/service.yaml
+++ b/my-app/templates/service.yaml
@@ -1,10 +1,10 @@
-{{- if .Values.service.service-name }}
+{{- if .Values.service.servicename }}
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.service.servicename }}
 spec:
-  {{- if .Values.service.service-type }}
+  {{- if .Values.service.servicetype }}
   type: {{ .Values.service.servicetype }}
   {{- end }}
   selector:
