--- a/application.yaml
+++ b/application.yaml
@@ -38,11 +38,11 @@ spec:
         repoURL: 'https://github.com/SujayDas1999/k8s-sports-app.git'
         revision: HEAD
         directories:
-          - path: my-app/apps/*   # This will match each subfolder like apigateway, products
+          - path: my-app/*   
   template:
     metadata:
-      name: '{{path.basename}}-application'   # Metadata.name will be the folder, e.g. apigateway-application
-      namespace: argocd                      # You can set a dynamic value if needed
+      name: '{{path.basename}}-application'
+      namespace: argocd                      
     spec:
       project: default
       source:
@@ -51,10 +51,10 @@ spec:
         path: '{{path.path}}'
         helm:
           valueFiles:
-            - values.yaml                     # Each app expects values.yaml in its folder
+            - values.yaml                     
       destination:
         server: 'https://kubernetes.default.svc'
-        namespace: '{{path.basename}}'        # Uses folder name as target namespace
+        namespace: '{{path.basename}}'        
       syncPolicy:
         automated:
           selfHeal: true
