--- a/my-app/apps/products/values.yaml
+++ b/my-app/apps/products/values.yaml
@@ -5,12 +5,13 @@ app:
   container:
     containername: products
     imagename: sujaydas/sportsapp-product
-    port: 3001
+    port: 3000
 
 service:
   servicename: products-service
   selectorname: products
-  port: 3001
+  port: 3000
   protocol: TCP
-  targetPort: 3001
+  targetPort: 3000
+  nodePort: 30000
 
