--- a/application.yaml
+++ b/application.yaml
@@ -26,7 +26,7 @@ spec:
             - 'apps/{{valuesFile}}'
       destination:
         server: 'https://kubernetes.default.svc'
-        namespace: '{{name}}'
+        namespace: 'myapp'
       syncPolicy:
         automated:
           selfHeal: true
